# evolution_original

./: .gitignore  Cargo.toml  README.md  imgui.ini
src/: actual_picture.rs  apt.rs  args.rs  constants.rs  ggez_utility.rs  imgui_wrapper.rs  lib.rs  main.rs  parser.rs  pic.rs  stack_machine.rs  ui.rs
src/parser/: aptnode.rs  lexer.rs  mod.rs  token.rs
src/pic/: actual_picture.rs  color.rs  coordinatesystem.rs  mod.rs  pic.rs
src/pic/data/: gradient.rs  grayscale.rs  hsv.rs  mod.rs  mono.rs  rgb.rs
src/stack_machine/: mod.rs
src/ui/: button.rs  fsm.rs  imgui_wrapper.rs  mod.rs  mouseactionstate.rs  mousebuttonstate.rs  mousestate.rs  state.rs
src/vm/: instruction.rs  mod.rs  stackmachine.rs
