[package]
name = "evolution"
version = "0.0.1"
authors = [ "Jack" ]
edition="2018"



[dependencies]
ggez = { version = "0.7.0", features = ["multithread-image-decoding"] }
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
imgui = "0.8.2"
imgui-gfx-renderer = "0.8.2"
rand = "0.8.5"
simdeez = { features = ["sleef"], path = "../simdeez" }
simdnoise = { path = "../rust-simd-noise" }
variant_count = "1.1.0"
rayon="1.5.3"
