[package]
name = "evolution"
version = "0.0.1"
authors = [ "Jack" ]
edition="2018"

[features]
ui = [ "minifb", "clap"]

[lib]
crate-type = ["lib"]
bench = false

[[bin]]
name = "evolution"
test = true
bench = false
path = "src/main.rs"
required-features = ["ui"]

[dependencies]
rand = "0.8.5"
simdeez = { features = ["sleef"], path = "../simdeez" }
simdnoise = { path = "../rust-simd-noise" }
variant_count = "1.1.0"
rayon="1.6.1"
image="0.24.5"
notify = "5.0.0"
readonly = "0.2.3"
clap = { version = "4.0.32", features=["derive"], optional=true }
minifb = { version = "0.23.0", optional=true }
